# austria-transition-tracker

./: .gitignore  LICENSE  README.md
services/: config_example.py  create_charts.py  main.py  publish_github.py  pyproject.toml  scrape_data.py
services/data_raw/e_control/: el_dataset_mn.csv
services/data_raw/eurostat/: AT_2021_energy_balance_TWh.xlsx  AT_cars_road_eqr_carpda.xlsx  AT_cars_road_eqs_carpda.xlsx  AT_coal_NRG_CB_SFFM.xlsx  AT_coal_en_bal_nrg_bal_c.xlsx  AT_electricity_fuel_type_nrg_cb_pem.xlsx  AT_fertilizer_aei_fm_usefert.xlsx  AT_gas_NRG_CB_GASM.xlsx  AT_goat_population_apro_mt_lsgoat.xlsx  AT_lorries_road_eqr_lormot.xlsx  AT_meat_apro_mt_pheadm.xlsx  AT_milk_apro_mk_colm.xlsx  AT_natural_gas_en_bal_nrg_bal_c.xlsx  AT_oil_NRG_CB_OILM.xlsx  AT_oil_en_bal_nrg_bal_c.xlsx  AT_pig_population_apro_mt_lspig.xlsx  AT_rail_tracks_rail_if_line_tr.xlsx  AT_sheep_population_apro_mt_lssheep.xlsx
services/data_raw/national_inventory_report/: agriculture.txt  agriculture_transport.txt  buildings.txt  buildings_commercial.txt  electricity_heat_generation.txt  electricity_heat_generation_fuel_shares.txt  energy_iron_steel.txt  energy_non_metallic_minerals.txt  (+9 more)
services/plot/: plot_agriculture.py  plot_all.py  plot_buildings.py  plot_car_brands.py  plot_emissions_sectors.py  plot_energy.py  plot_energy_balance.py  plot_fluorinated_gases.py  plot_food_consumption.py  plot_fossil_fuels.py  plot_industry.py  plot_lulucf.py  plot_single.py  plot_transport.py  plot_waste.py
services/source/: download_econtrol.py  download_eurostat.py  download_eurostat_energy_balance.py
(+476 files in other folders)
