[tool.poetry]
name = "austria-transition-tracker-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
eurostat = "^1.1.1"
plotly = "^6.6.0"
matplotlib = "^3.10.8"
openpyxl = "^3.1.5"
loguru = "^0.7.3"
requests = "^2.32.5"
uvicorn = "^0.41.0"
apscheduler = "^3.11.2"
fastapi = "^0.135.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
